--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 authors = ["Mark Sherry <mdsherry@gmail.com>"]
 
 [dependencies]
-reqwest = "0.7.1"
+reqwest = "0.8.4"
 scraper = "0.4.0"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
 termion = "1.4.0"
 error-chain = "0.10.0"
 epub-builder = "0.1"
+failure = "0.1.1"
+lazy_static = "0.2"
